tests/error/divideInteger-wrong-1st-argument-string.uplc
(program 1.0.0[[(builtin divideInteger)(con string "Ola")](con integer 10)])